2002-06-17  Eric Blake  <ebb9@email.byu.edu>

	* src/bytecode.cpp (EmitSwitchStatement): Don't optimize gotos
	with no-op default label - bug 2895.

2002-06-15  Chris Abbey  <jikes@cabbey.net>

	* src/unparse.cpp (AstCompilationUnit::Unparse): fix definition
	signature to match declaration signature in ast.h; AIX's xlC
	compiler isn't as sloppy as gcc about signature constnes.

2002-06-05  Chris Abbey  <jikes@cabbey.net>

	* src/bytecode.cpp (EmitAssertStatement): produce proper error
	instead of assertion if user requests -source 1.4 and uses asserts
	in their code but doesn't have Ljava/lang/AssertionError;
	available because they used a 1.3 rt.jar in BOOTCLASSPATH for
	example.

2002-06-04  Andrew G. Tereschenko  <tag@ibis.odessa.ua>

	* src/double.cpp: additional parenthesis near shift operators
	to make MSVC v7 (.NET) happier.

2002-06-03  Chris Dennis  <chris.dennis@invidi.com>

	* src/expr.cpp (ProcessClassInstanceCreationExpression):
	deal with VC++'s inability to support the new ANSI 'for'
	scoping rules; again.

2002-05-31  Chris Abbey  <jikes@cabbey.net>

	* src/stream.cpp (getErrorMessage): clarify error message
	for assert as a keyword.

2002-05-23  Eric Blake  <ebb9@email.byu.edu>

	* src/definite.cpp (DefinitePLUSPLUSOrMINUSMINUS): Yet another
	corner case - bug 2398.

2002-05-23  Eric Blake  <ebb9@email.byu.edu>

	* src/expr.cpp (CheckSimpleName): One last bug in nested classes -
	bug 440.

2002-05-22  Eric Blake  <ebb9@email.byu.edu>

	* src/error.h (ZERO_DIVIDE_ERROR):
	* src/error.cpp (ZERO_DIVIDE_ERROR):
	* src/expr.cpp (ProcessSLASH, ProcessMOD),
	(ProcessAssignmentExpression): Remove ZERO_DIVIDE_ERROR, since
	http://java.sun.com/docs/books/jls/clarifications-2-2nd-ed.html -
	the JLS2 clarification page - states division by 0 is legal Java.

2002-05-22  Eric Blake  <ebb9@email.byu.edu>

	* src/ast.h (NewAstArray): Make this a global function, to
	workaround egcs-1.1.2 bug.

2002-05-22  Eric Blake  <ebb9@email.byu.edu>
